--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ nav{
     width:100%;
  }
 
+ .items{
+    width:20%
+ }
  
  .items:hover{
     background-color: gray;
@@ -135,6 +138,7 @@ body{
     padding:10px;
 }
 
+
 #space li{
     list-style-type:none;
 }
@@ -236,5 +240,27 @@ img{
     .music-list {
         flex: 1;
         margin: 10px;
+    }
+}
+
+@media (max-width: 500px) {
+    #books img{
+        max-width: 200px;
+        max-height:max-content;
+    }
+    #nav_div{
+        font-family: "Ubuntu", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        background-color: #0B3948;
+        color:white;
+        font-size: 32px;
+        padding: 5px;
+        font-size: 20px;
+    }
+    .spaceimg{
+        background-color: rgb(163, 174, 174);
+        border-radius: 20px;
+        padding:5px;
     }
 }
