--- a/style.css
+++ b/style.css
@@ -263,4 +263,47 @@ img{
         border-radius: 20px;
         padding:5px;
     }
+
+    #space p{
+        font-size: 20px;
+    }
+
+}
+
+@media (max-width: 400px) {
+    #books img{
+        max-width: 170px;
+        max-height:max-content;
+    }
+    #nav_div{
+        font-family: "Ubuntu", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        background-color: #0B3948;
+        color:white;
+        font-size: 32px;
+        padding: 5px;
+        font-size: 20px;
+    }
+    .spaceimg{
+        background-color: rgb(163, 174, 174);
+        border-radius: 20px;
+        padding:5px;
+        max-width: 50%;
+    }
+
+    #space p,  h2{
+        font-size: 15px;
+        color:white;
+        text-align: left;
+    }
+
+    #space img{
+        max-width: 100%;
+    }
+
+    #space{
+        align-items: center;
+        justify-content: center;
+    }
 }
