--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ h1{
 
 body{
     background-color: #000000;
-    background-image: url("../images/spacebg.png");
+    background-image: url(../images/spacebg.png);
     display: flex;
     flex-direction: column;
 }
